# exchange-pb

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PUBLISHING.md  QUICK_PUBLISH_GUIDE.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs
go/: Makefile  README.md  go.mod
go/examples/: basic_usage.go
go/pkg/mexc/: PrivateAccountV3Api.pb.go  PrivateDealsV3Api.pb.go  PrivateOrdersV3Api.pb.go  PublicAggreBookTickerV3Api.pb.go  PublicAggreDealsV3Api.pb.go  PublicAggreDepthsV3Api.pb.go  PublicBookTickerBatchV3Api.pb.go  PublicBookTickerV3Api.pb.go  PublicDealsV3Api.pb.go  PublicIncreaseDepthsBatchV3Api.pb.go  PublicIncreaseDepthsV3Api.pb.go  PublicLimitDepthsV3Api.pb.go  (+4 more)
nodejs/: README.md  package.json  tsconfig.json
nodejs/examples/: README.md  basic_serialization.js  basic_usage.js  complex_wrapper.js  performance_test.js  run_all.js  websocket_simulation.js
nodejs/scripts/: generate.js
nodejs/src/: index.ts  proto.d.ts  proto.js
proto/mexc/: PrivateAccountV3Api.proto  PrivateDealsV3Api.proto  PrivateOrdersV3Api.proto  PublicAggreBookTickerV3Api.proto  PublicAggreDealsV3Api.proto  PublicAggreDepthsV3Api.proto  PublicBookTickerBatchV3Api.proto  PublicBookTickerV3Api.proto  PublicDealsV3Api.proto  PublicIncreaseDepthsBatchV3Api.proto  PublicIncreaseDepthsV3Api.proto  PublicLimitDepthsV3Api.proto  PublicMiniTickerV3Api.proto  PublicMiniTickersV3Api.proto  PublicSpotKlineV3Api.proto  PushDataV3ApiWrapper.proto
rust/: build.rs
scripts/: add_go_package.sh  bump_version.sh  demo_publish.sh
src/: lib.rs
